# slack-influence-bot

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  slack_conversation.py  slack_history.py  slack_stream.py
docs/: slack_events.md
memgraph/: Dockerfile
memgraph/query_modules/: tokenizer.py  transform.py
resources/memgraph/: Dockerfile
resources/memgraph/query_modules/: tokenizer.py  transform.py
scripts/: kafka_json_consumer.py  kafka_json_producer.py
slack_influence_bot/: __init__.py  bot.py  response.py
slack_influence_bot/handlers/: kafka.py  memgraph.py
slack_influence_bot/interfaces/: __init__.py  event_handler.py  graph_handler.py
slack_influence_bot/utils/: env.py  log.py  slack.py
test/utils/: test_slack.py
utils/: kafka_json_consumer.py  kafka_json_producer.py
