[tool.poetry]
name = "slack_influence_bot"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk= "^3.9.1"
slack-bolt = "^1.8.0"
kafka-python = "^2.0.2"
spacy = "^3.1.2"
gqlalchemy = "^1.0.5"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest-black = "^0.3.12"
pytest = "^5.4"
flake8 = "^3.7.9"
pytest-pylint = "^0.17.0"
pytest-timeout = "^1.4.1"
pytest-cov = "^2.10.0"
pytest-benchmark = "^3.2.3"
pytest-flake8 = "^1.0.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
